Fixed lore command to be pipe newlined